# zet-app

./: .env.default  .eslintrc.js  .gitignore  .yarnrc.yml  README.md  app.json  babel.config.js  docker-compose.yml  metro.config.js  package-lock.json  package.json  tsconfig.json
.github/workflows/: deploy-main.yml  deploy-release.yml
android/: link-assets-manifest.json  settings.gradle
android/app/: build.gradle
app/: _layout.tsx  index.tsx  profile.tsx
assets/: style.ts
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/src/zet/: __init__.py  __main__.py  app.py  config.py
backend/src/zet/db/migrations/: README  env.py
backend/src/zet/db/models/: __init__.py  association.py  shop.py  user.py
backend/src/zet/domain/auth/: __init__.py  controllers.py  guards.py  schemas.py  services.py
backend/src/zet/domain/auth/verifiers/: __init__.py  apple.py  base.py  kakao.py  naver.py
backend/src/zet/domain/shops/: __init__.py  controllers.py  schemas.py  services.py
backend/src/zet/lib/: deps.py  schema.py
backend/tests/: conftest.py
backend/tests/integration/: test_auth_api.py  test_shops_api.py
backend/tests/unit/: test_social_verifiers.py
components/: index.ts
constants/: ui.ts
docs/: CICD_SETUP.md
fastlane/: Appfile  Fastfile  Matchfile  README.md
frontend/: .env.example  DESIGN.md  app.json  package.json
hooks/: index.ts  notification.ts  style.ts
ios/: Podfile
scripts/: generate-types.sh
services/: config.ts
src/: index.tsx
stores/: auth.ts  shop.ts
types/: auth.ts  component.ts  index.ts  screen.ts  shop.ts  style.ts
utils/: asyncStorage.ts  guestStorage.ts  index.ts  object.ts  storage.ts
(+366 files in other folders)
