[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zet-backend"
version = "0.1.0"
description = "LiteStar backend for ZET monorepo"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "advanced-alchemy>=0.20.0",
    "alembic>=1.14.0",
    "litestar[jwt,pydantic,structlog]>=2.13.0",
    "pydantic>=2.9.0",
    "psycopg[binary,pool]>=3.2.0",
    "python-dotenv>=1.0.1",
    "sqlalchemy>=2.0.36",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "aiosqlite>=0.20.0",
    "httpx>=0.28.0",
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.7.0",
]

[project.scripts]
zet-backend = "zet.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]

[tool.mypy]
python_version = "3.12"
plugins = []
strict = true
packages = ["zet"]
explicit_package_bases = true

[tool.basedpyright]
include = ["src", "tests"]
extraPaths = ["src"]
reportExplicitAny = false
reportUnannotatedClassAttribute = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownParameterType = false
reportUnknownArgumentType = false
reportMissingParameterType = false
reportAny = false
reportUnusedCallResult = false
reportCallInDefaultInitializer = false
